syntax = "proto3";

import "address.proto";
import "empty.proto";
import "id.proto";

option java_multiple_files = true;
option java_package = "se.umu.cs";
option java_outer_classname = "PulsarCom";

package se.umu.cs;

service PulsarComService {
    rpc createTopic (RpcAddress) returns (RpcId);
    rpc destroyTopic (RpcId) returns (RpcEmpty);
}