syntax = "proto3";

option java_multiple_files = true;
option java_package = "se.umu.cs";
option java_outer_classname = "RpcIdMessage";

package se.umu.cs;

message RpcId {
    string id = 1;
    string error = 2;
}